Add Material Design

--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,1 +1,6 @@
-<p>homepage works!</p>
+<mat-tab-group animationDuration="0ms">
+  <mat-tab label="Overview"> Content "Overview" </mat-tab>
+  <mat-tab label="Participants"> Content "Participants" </mat-tab>
+  <mat-tab label="Payments"> Content "Payments" </mat-tab>
+  <mat-tab label="Monitoring"> Content "Monitoring" </mat-tab>
+</mat-tab-group>
