--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,63 @@
-<h1 class="text-navy text-3xl font-bold underline">Hello world!</h1>
-
-<router-outlet />
+<div class="navbar bg-navy">
+  <div class="flex-none">
+    <div class="drawer">
+      <input id="my-drawer" type="checkbox" class="drawer-toggle" />
+      <div class="drawer-content">
+        <!-- Page content here -->
+        <label
+          for="my-drawer"
+          class="drawer-button btn btn-square btn-ghost text-white"
+        >
+          <svg
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            class="inline-block h-5 w-5 stroke-current"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              stroke-width="2"
+              d="M4 6h16M4 12h16M4 18h16"
+            ></path>
+          </svg>
+        </label>
+      </div>
+      <div class="drawer-side">
+        <label
+          for="my-drawer"
+          aria-label="close sidebar"
+          class="drawer-overlay"
+        ></label>
+        <ul class="menu bg-base-200 text-base-content min-h-full w-80 p-4">
+          <!-- Sidebar content here -->
+          <li><a>Sidebar Item 1</a></li>
+          <li><a>Sidebar Item 2</a></li>
+        </ul>
+      </div>
+    </div>
+  </div>
+  <div class="flex-1">
+    <a class="btn btn-ghost text-xl text-white" routerLink="/">121 Portal</a>
+  </div>
+  <div class="flex-none">
+    <button class="btn btn-square btn-ghost text-white">
+      <svg
+        xmlns="http://www.w3.org/2000/svg"
+        fill="none"
+        viewBox="0 0 24 24"
+        class="inline-block h-5 w-5 stroke-current"
+      >
+        <path
+          stroke-linecap="round"
+          stroke-linejoin="round"
+          stroke-width="2"
+          d="M5 12h.01M12 12h.01M19 12h.01M6 12a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0zm7 0a1 1 0 11-2 0 1 1 0 012 0z"
+        ></path>
+      </svg>
+    </button>
+  </div>
+</div>
+<div class="container mx-auto">
+  <router-outlet />
+</div>
