--- a/src/app/pages/homepage/homepage.component.html
+++ b/src/app/pages/homepage/homepage.component.html
@@ -1,1 +1,43 @@
-<p>homepage works!</p>
+<div role="tablist" class="tabs tabs-bordered mt-8 w-full">
+  <input
+    type="radio"
+    name="my_tabs_1"
+    role="tab"
+    class="tab"
+    aria-label="Tab 1"
+    checked
+  />
+  <div role="tabpanel" class="tab-content py-10">
+    <div class="grid grid-cols-3 gap-4">
+      @for (payment of payments; track payment.id) {
+        <div class="card bg-white">
+          <div class="card-body">
+            <h2 class="card-title">{{ payment.title }}</h2>
+            <p>Amount: {{ payment.amount | currency }}</p>
+            <div class="card-actions justify-end">
+              <a class="btn btn-primary" routerLink="/payment">View Payment</a>
+            </div>
+          </div>
+        </div>
+      }
+    </div>
+  </div>
+
+  <input
+    type="radio"
+    name="my_tabs_1"
+    role="tab"
+    class="tab"
+    aria-label="Tab 2"
+  />
+  <div role="tabpanel" class="tab-content p-10">Tab content 2</div>
+
+  <input
+    type="radio"
+    name="my_tabs_1"
+    role="tab"
+    class="tab"
+    aria-label="Tab 3"
+  />
+  <div role="tabpanel" class="tab-content p-10">Tab content 3</div>
+</div>
