--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,9 @@
       class="[&_button:not(:hover)]:text-white"
       (click)="sidebarVisible = true"
     />
-    <h1 class="ml-2 text-white">121 Portal</h1>
+    <h1 class="ml-2 text-xl text-white">
+      <span class="font-bold">121 Portal | </span> Cash for breakfast box
+    </h1>
   </ng-template>
   <ng-template pTemplate="end">
     <div class="align-items-center flex gap-2">
