--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-header />
-<router-outlet />
-<app-footer />
+<div class="flex min-h-screen flex-col">
+  <app-header />
+  <div class="flex-1">
+    <router-outlet />
+  </div>
+  <app-footer />
+</div>
+<p-toast [key]="toastKey"></p-toast>
