--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="mt-8 bg-navy text-white">
-  <div class="container mx-auto flex justify-between py-12 font-extralight">
+  <div class="container flex justify-between py-12 font-extralight">
     <div class="w-1/4">
       <h3 class="mb-6 text-xl font-bold">About 121 Portal</h3>
       <p>
