--- a/src/app/components/program-header/program-header.component.html
+++ b/src/app/components/program-header/program-header.component.html
@@ -1,5 +1,5 @@
 <div class="w-full bg-white">
-  <div class="container mx-auto pt-2">
+  <div class="container pt-2">
     <p-tabMenu [model]="navMenuItems" />
   </div>
 </div>
