--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,7 +4,7 @@
 @import "tailwindcss/base.css" layer(tailwind-base);
 
 @import "primeng/resources/primeng.css";
-@import "primeng/resources/themes/tailwind-light/theme.css";
+@import "primeng/resources/themes/aura-light-blue/theme.css";
 @import "primeicons/primeicons.css";
 
 @import "tailwindcss/components.css" layer(tailwind-utilities);
@@ -12,4 +12,5 @@
 
 body {
   @apply bg-grey-100;
+  overflow-y: scroll; /* Always show scrollbars to avoid page skipping about */
 }
