--- a/src/app/components/activity-log/activity-log.component.html
+++ b/src/app/components/activity-log/activity-log.component.html
@@ -3,7 +3,7 @@
     <div class="w-full border-b border-b-grey-300 py-4">
       <div class="flex w-full gap-2">
         <i [class]="'grow-0 text-3xl ' + logItem.icon"></i>
-        <div class="mr-auto">
+        <div class="ltr:mr-auto rtl:ml-auto">
           <h3 class="text-xl font-bold">{{ logItem.label }}</h3>
           <p>{{ logItem.date }}</p>
         </div>
