--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -13,7 +13,14 @@
     </h1>
   </ng-template>
   <ng-template pTemplate="end">
-    <div class="align-items-center flex gap-2">
+    <div class="flex items-center gap-2">
+      <p-button
+        label="Toggle RTL"
+        link
+        class="[&_button]:text-white"
+        size="small"
+        (click)="toggleRTL()"
+      />
       <p-button
         icon="pi pi-search"
         plain
