--- a/src/app/pages/payment-details/payment-details.component.html
+++ b/src/app/pages/payment-details/payment-details.component.html
@@ -17,11 +17,11 @@
           <div class="mb-4 w-full">
             <div class="inline-block w-1/2">
               <p>Total payment amount</p>
-              <p class="text-2xl font-bold">5,084</p>
+              <p class="text-2xl font-bold">$ 159,566</p>
             </div>
             <div class="inline-block w-1/2 pl-4">
-              <p>Included participants:</p>
-              <p class="text-2xl font-bold">$ 159,566</p>
+              <p>Included participants</p>
+              <p class="text-2xl font-bold">5,084</p>
             </div>
           </div>
           <div class="h-80 w-full">
