--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -9,7 +9,7 @@
       (click)="sidebarVisible = true"
     />
     <h1 class="ml-2 text-xl text-white">
-      <span class="font-bold">121 Portal | </span> Cash for breakfast box
+      121 Portal<span class="font-normal"> | Cash for breakfast box</span>
     </h1>
   </ng-template>
   <ng-template pTemplate="end">
