--- a/src/app/pages/payment-details/payment-details.component.html
+++ b/src/app/pages/payment-details/payment-details.component.html
@@ -4,24 +4,24 @@
     <div class="mt-2 flex justify-between">
       <div>
         <h1 class="text-2xl">Payment 01/04/2024</h1>
-        <small class="text-xs text-grey-500"
+        <small class="text-xs text-grey-700"
           >Last updated: 12:34, 31/08/23</small
         >
       </div>
       <p-button label="Approve Payment" rounded (onClick)="approvePayment()" />
     </div>
-    <h2 class="mb-4 mt-8 text-xl">Payment Monitoring</h2>
+    <p class="mb-4 mt-8 text-xl font-semibold">Payment Monitoring</p>
     <div class="flex w-full items-stretch gap-4">
       <div class="w-1/2">
         <p-card header="Payment data" styleClass="h-full">
           <div class="mb-4 w-full">
             <div class="inline-block w-1/2">
-              <p>Total payment amount</p>
-              <p class="text-2xl font-bold">$ 159,566</p>
+              <h3 class="font-medium">Total payment amount</h3>
+              <h1>$ 159,566</h1>
             </div>
             <div class="inline-block w-1/2 pl-4">
-              <p>Included participants</p>
-              <p class="text-2xl font-bold">5,084</p>
+              <h3 class="font-medium">Included participants</h3>
+              <h1>5,084</h1>
             </div>
           </div>
           <div class="h-80 w-full">
@@ -44,7 +44,7 @@
         </p-card>
       </div>
     </div>
-    <h2 class="mb-4 mt-8 text-xl">Participant list</h2>
+    <p class="mb-4 mt-8 text-xl font-semibold">Participant list</p>
     <app-people-affected-table
       [peopleAffected]="peopleAffected()"
       [totalRecords]="totalRecords()"
